# dj3

./: .gitignore  manage.py  pyproject.toml
dj3/: asgi.py  settings.py  urls.py  wsgi.py
filter_related_through/: apps.py  models.py
filter_related_through/migrations/: 0001_initial.py
one/: urls.py  views.py
