[tool.poetry]
name = "dj3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8.0"
djangorestframework = "^3.11"
Django = "^3.0"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
